--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "bull": "^4.7.0",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
