--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bull": "^3.15.8",
+    "@types/cheerio": "^0.22.31",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "@types/puppeteer": "^5.4.5",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
