--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start:dev": "export NODE_ENV=development; nodemon --inspect=0.0.0.0:5859 ./src/server.ts"
+    "start:dev": "nodemon --inspect=0.0.0.0:5859 ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "@types/bull": "^3.15.8",
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.2",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/puppeteer": "^5.4.5",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -31,12 +33,11 @@
     "express-async-handler": "^1.2.0",
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
-    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
     "puppeteer": "^13.4.1",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
-    "winston": "^3.6.0",
-    "xss": "^1.0.10"
+    "winston": "^3.6.0"
   }
 }
