--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
+    "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/puppeteer": "^5.4.5",
@@ -34,6 +35,7 @@
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "puppeteer": "^13.4.1",
     "ts-node": "^10.6.0",
