--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node --no-lazy -r ts-node/register ./src/server.ts",
-    "start:dev": "nodemon --inspect=0.0.0.0:5859 ./src/server.ts"
+    "start": "cross-env NODE_ENV=development node --no-lazy -r ts-node/register ./src/server.ts",
+    "start:dev": "cross-env NODE_ENV=development nodemon --inspect-brk=0.0.0.0:5859 ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@types/axios": "^0.14.0",
     "@types/bull": "^3.15.8",
     "@types/cheerio": "^0.22.31",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
     "@types/joi": "^17.2.3",
@@ -22,6 +23,8 @@
     "@types/puppeteer": "^5.4.5",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -31,7 +34,6 @@
     "axios": "^0.26.0",
     "bull": "^4.7.0",
     "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "helmet": "^5.0.2",
