--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "joi": "^17.6.0",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
-    "puppeteer": "^13.4.1",
+    "puppeteer": "==10.0.0",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
     "winston": "^3.6.0"
